starting a new phase where every machines are sockets servers